--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap');
 
 :root {
+  --color-text: #faedcd;
+  --color-highlight: #fefae0;
+  --color-bg: #242424;
+  --color-primary: #ce4257;
+  --color-secondary: #ff7f51;
+  --color-border: rgba(245, 235, 224, 0.2);
+
   font-family: 'JetBrains Mono', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--color-text);
+  background-color: var(--color-bg);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
